# prototype

./: .gitignore  CMakeLists.txt  README.md
finance-display/: CMakeLists.txt
finance-display/include/: format.h  types.h
finance-display/src/: CMakeLists.txt  format.cpp
